force-app/main/default/objects/Employee__c/fields/EName__c.field-meta.xml
<CustomField>
    <fullName>EName__c</fullName>
    <label>EName</label>
    <length>20</length>
    <type>Text</type>
</CustomField>